update: api responses and swagger docs
